--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,18 @@ body {
   background: var(--background);
   font-family: theme("fontFamily.sans");
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 1s ease-in-out;
+}
